<resources>
    <string name="app_name">Soterio</string>
    <string name="title_activity_intro">IntroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_onboarding">onboarding</string>
    <string name="bluetoothText">This application uses low energy Bluetooth to log encounters between phones with the application installed. \n\nAndroid requires location and Bluetooth access to enable Bluetooth functions for Soterio. Soterio cannot work properly without it.</string>
    <string name="privacy_policy"><b>Data collection</b> \n\nYour phone will be sharing a unique number with other phones that you come nearby. This number contains no personal identifiable information. At no point is your personal information ever shared with a third party.
        \n\n<b>Ensuring privacy</b> \n\nPhones will never share personal identifiable information. Your name and ID number are stored securely on your phone only. Only the Ministry of Health is able to decode the unique number your phone has received to a person.
        \n\n<b>Contact tracing and notifications</b> \n\nExposure notifications sent will not contain the identities of the patients whom you might have been in contact with. Nonetheless the notification will tell you the approximate time of the encounter and its duration.
        \n\nWe are committed to protect your privacy while combating the corona virus.</string>
    <string name="notifications">We need you to allow us to send you notifications so as for Soterio to receive and display notifications from the Ministry of Health of Zimbabwe.</string>
    <string name="registrationDone">Your phone will be securely and anonymously sharing a unique with other phones around you. This will be a key in alerting you if you have been exposed to a COVID-19 patient.</string>
    <string name="start_upload">Start upload</string>
    <string name="health_authorization_notify">Authorization by a Health official will be required.</string>
    <string name="thank_you_for_helping_in_the_fight_against_corona_virus">Thank you for helping in the fight against corona virus.</string>
    <string name="get_otp_change_number">Change number</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="get_otp_title">Verify phone number</string>
    <string name="get_otp_supporting_text">We will send a verification code to this phone number: </string>
    <string name="back_to_prev_screen">This will take you back to the previous screen</string>
    <string name="phone_number">PHONE_NUMBER</string>
    <string name="go_back">Go back</string>
    <string name="server_addr">http://10.220.42.182</string>
    <string name="route_auth">/mobile/phoneUtils/auth</string>
    <string name="route_tokens">/mobile/phoneUtils/tokens</string>
    <string name="error">Error</string>
    <string name="verification_send_error">We couldn\'t send you a verification code. Please try again</string>
    <string name="try_again">Try again</string>
    <string name="connection_error">There was a problem connecting to the Ministry of Health server. Please try again.</string>
    <string name="permissions_required">Permissions required</string>
    <string name="permissions_location_rationale">Android requires location and Bluetooth access to enable Bluetooth functions for Soterio. Soterio cannot work properly without it.</string>
    <string name="enable_location">Enable</string>
    <string name="get_started">Get started</string>
    <string name="server_busy">Server is currently busy. Please try again later.</string>
    <string name="change_number">Change number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_request">We need to register your phone number before getting started.</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="service_not_ok">Soterio not running</string>
    <string name="service_not_ok_body">Make sure Soterio is active before you leave home or when in public places.</string>
    <string name="service_not_ok_action">Check app now</string>
    <string name="service_ok_title">Soterio is active</string>
    <string name="service_ok_body">Keep Soterio active when you leave home or are in public places.</string>
    <string name="always_wash_your_hands">Always wash your hands</string>
    <string name="wash_hands_message">To keep yourself and your family safe, wash your hands with running water for at least 20 seconds.</string>
    <string name="dismiss">Dismiss</string>
    <string name="what_should_i_do">What should I do?</string>
    <string name="no_contact_text">It seems that you have not been in contact with anyone who has recently been diagnosed with COVID-19</string>
    <string name="positive_contact">You may have been in contact with a COVID-19 patient</string>
    <string name="positive_contact_text">It seems that you may have been recently in contact with someone who has tested positive for the coronavirus.</string>
    <string name="call_covid_team_text">If you feel sick, please call the National COVID-19 response team by clicking CALL below</string>
    <string name="call_now">Call now</string>
    <string name="self_isolation_message">To keep your family and friends safe, you are advised to self-isolate and monitor your symptoms</string>

</resources>