<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        app:cardElevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
                <TextView
                    android:id="@+id/textView2"
                    android:layout_toEndOf="@id/icon"
                    android:layout_marginStart="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/always_wash_your_hands"
                    android:textSize="16sp"
                    android:textColor="@color/darkText"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wash_hands_message"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dismissWashHandsButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAllCaps="false"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dismiss" />
            </RelativeLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>