<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/dotBaseColor"
        app:cardElevation="0dp">
        <LinearLayout
            android:paddingVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:paddingHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_icon_exposed_contact"/>
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_toEndOf="@id/icon"
                        android:layout_marginStart="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/positive_contact"
                        android:textSize="16sp"
                        android:textColor="@color/danger"
                        />
                </RelativeLayout>
                <TextView
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/positive_contact_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/dotBaseColor"
                android:backgroundTint="@color/dotBaseColor"/>
            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_covid_team_text"/>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonVisitTestingCentre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Visit a testing centre"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:textAllCaps="false"
                        android:layout_marginEnd="24dp"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonCallNow"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:icon="@drawable/ic_round_call_24"
                        app:iconSize="16dp"
                        app:iconPadding="12dp"
                        android:text="@string/call_now"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dotBaseColor"
                android:backgroundTint="@color/dotBaseColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/self_isolation_message"/>
            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>