<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardElevation="2dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:checkable="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload my encounter log"
                    android:textColor="@color/darkText"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/faint"
                android:text="@string/health_authorization_notify" />

            <LinearLayout
                android:layout_gravity="end"
                android:gravity="end"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dismissUploadButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="end"
                    android:textColor="@color/text"
                    android:text="@string/dismiss"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startUpload"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_upload"
                    app:iconPadding="12dp"
                    app:iconGravity="start"
                    app:iconSize="16dp"
                    android:layout_gravity="end"
                    android:text="@string/start_upload"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>